Frontend Javascript and HTML pages created

--- a/Frontend/src/deleteFreelancer.html
+++ b/Frontend/src/deleteFreelancer.html
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <script type="text/javascript" src="deleteFreelancer.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/secondary-pages.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <title>Delete</title>
 </head>
-
-<body>
-    <header class="header" id="header">
-        <div class="site-title">
-            <a class="header_home" href="deleteFreelancer.html">Remove Freelancer</a>
-        </div>
-        <div class="header-buttons" id="buttons">
-            <a class="nav_link button" href="addFreelancer.html">Add Freelancer</a>
-            <a class="nav_link button" href="getFreelancer.html">Get Freelancers</a>
-            <a class="nav_link button" href="updateFreelancer.html">Update Freelancer</a>
-        </div>
-    </header>
-
-    <div class="card">
-        <h2>Delete Freelancer</h2>
-        <h3>Insert freelancer id below to remove a freelancer.</h3>
-        <form class="card-content" id="delete-freelancer-form">
-            <p class="form-field">
-                <label>What is the id of the freelancer you want to delete?</label>
-                <input type="text" required class="validated-field" id="freelancer-id" placeholder="Freelancer id..." autofocus>
-            </p>
-            <button type="submit" id="delete-freelancer-button">Delete</button>
-        </form>
+<body class="background">
+<header class="header" id="header">
+    <div class="site-title">
+        <a class="header_home" href="index.html">OccuPost - Post and Get  Occupied</a>
+        <ul class="navigation">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="addFreelancer.html">Add</a></li>
+            <li><a href="getFreelancer.html">Details</a></li>
+            <li><a href="deleteFreelancer.html">Delete</a></li>
+            <li><a href="updateFreelancer.html">Update</a></li>
+        </ul>
     </div>
+</header>
+<div class="card">
+    <h2>Delete Freelancer</h2>
+    <form class="card-content" id="delete-freelancer-form">
+        <p class="form-field">
+            <input type="text" required class="validated-field" id="delete-freelancer-id-field" placeholder="Freelancer id...">
+        </p>
+        <button type="submit">Delete</button>
+    </form>
+</div>
+<div class="container" id="container">
+    <div class="modal">
+        <div class="freelancer-container" id="freelancer-container"></div>
+        <p>Freelancer has been deleted!</p>
+        <button id="close">Close</button>
+    </div>
+</div>
+<script>
+        const container = document.getElementById('container');
+        const close = document.getElementById('close');
 
-    <div id="freelancer-list"></div>
+        close.addEventListener('click', () => {
+            container.classList.remove('show');
+        });
+</script>
 </body>
-
 </html>
