addFreelancer and deleteFreelancer files updated

--- a/Frontend/src/addFreelancer.html
+++ b/Frontend/src/addFreelancer.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="css/secondary-pages.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <meta charset="UTF-8">
     <title>Add</title>
 </head>
 <body class="background">
@@ -20,7 +21,7 @@
     </div>
 </header>
 <div class="card">
-    <h2 id="book-details-header">Add a New Freelancer</h2>
+    <h2 id="freelancer-details-header">Add a New Freelancer</h2>
     <form class="card-content" id="add-new-freelancer-form">
         <p class="form-field">
             <input type="text" required class="validated-field" id="add-freelancer-details-name" placeholder="Your name...">
@@ -29,13 +30,13 @@
             <input type="text" class="validated-field" id="add-freelancer-details-expertise" placeholder="Your expertise...">
         </p>
         <p class="form-field">
-            <input type="text" class="validated-field" id="add-book-details-rate" placeholder="Your hourly rate...">
+            <input type="text" class="validated-field" id="add-freelancer-details-rate" placeholder="Your hourly rate...">
         </p>
         <p class="form-field">
-            <input type="text" class="validated-field" id="add-book-details-location" placeholder="Your location...">
+            <input type="text" class="validated-field" id="add-freelancer-details-location" placeholder="Your location...">
         </p>
         <p class="form-field">
-            <input type="text" class="validated-field" id="add-book-details-contact" placeholder="Your contact...">
+            <input type="text" class="validated-field" id="add-freelancer-details-contact" placeholder="Your contact...">
         </p>
         <button id="submit" type="submit">Submit</button>
     </form>
