redesign css for stuff, also gave lambda more memory

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -9,20 +9,27 @@
 <body class="background">
 <header class="header" id="header">
     <div class="site-title">
-        <a class="header_home" href="index.html">OccuPost - Post and Get  Occupied</a>
         <ul class="navigation">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html"><img src="https://i.imgur.com/BGZtprc.png" alt="logo"></a></li>
             <li><a href="addFreelancer.html">Add</a></li>
             <li><a href="getFreelancer.html">Details</a></li>
             <li><a href="deleteFreelancer.html">Delete</a></li>
             <li><a href="updateFreelancer.html">Update</a></li>
         </ul>
     </div>
+    <a class="end_header">Team: We the Bestt</a>
 </header>
-<div class="card">
-    <h1>Welcome to a Free Platform for Freelancers!</h1>
-    <h3>View the List of All Freelancers by clicking the button below.</h3>
+<div class="about_outer">
+    <div class="about">A Free platform for freelancers</div>
+    <div class="about_small"> We are giving freelancers a special space to promote and showcase themselves.<br>
+        Making it easier to find people for each and every job out there.<br>
+        Create, Delete, and Update all of your information all with OccuPost's freelancer advertising platform!
+    </div>
 </div>
+<!--<div class="card_test">-->
+<!--    <h1>Welcome to a Free Platform for Freelancers!</h1>-->
+<!--    <h3>View the List of All Freelancers by clicking the button below.</h3>-->
+<!--</div>-->
 <div class="card">
     <form class="card-content" id="get-all-freelancers-form">
         <p>
