--- a/Frontend/src/addFreelancer.html
+++ b/Frontend/src/addFreelancer.html
@@ -10,15 +10,15 @@
 <body class="background">
 <header class="header" id="header">
     <div class="site-title">
-        <a class="header_home" href="index.html">OccuPost - Post and Get  Occupied</a>
         <ul class="navigation">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html"><img src="https://i.imgur.com/BGZtprc.png" alt="logo"></a></li>
             <li><a href="addFreelancer.html">Add</a></li>
             <li><a href="getFreelancer.html">Details</a></li>
             <li><a href="deleteFreelancer.html">Delete</a></li>
             <li><a href="updateFreelancer.html">Update</a></li>
         </ul>
     </div>
+    <a class="end_header">Team: We the Bestt</a>
 </header>
 <div class="card">
     <h2 id="freelancer-details-header">Add a New Freelancer</h2>
