--- a/Frontend/src/getFreelancer.html
+++ b/Frontend/src/getFreelancer.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <meta charset="UTF-8">
-    <title id="site-title">Freelancer Profile</title>
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/zECaMhq.png">
+    <title id="site-title">OccuPost | Profile</title>
 </head>
 <body class="background">
 <header class="header" id="header">
@@ -31,7 +32,9 @@
 </div>
 <div class="container" id="container">
     <div class="modal">
+        <img src="https://s3.amazonaws.com/pure_charity/uploads/production/avatar/image/179257/large_blank-profile-picture-973460_1280.png">
         <div class="freelancer-container" id="freelancer-container"></div>
+        <button id="hire">Hire Now</button>
         <button id="close">Close</button>
     </div>
 </div>
