--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -4,7 +4,8 @@
     <script type="text/javascript" src="homePage.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <title>Freelancers</title>
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/zECaMhq.png">
+    <title>OccuPost | Home</title>
 </head>
 <body class="background">
 <header class="header" id="header">
@@ -19,27 +20,30 @@
     </div>
     <a class="end_header">Team: We the Bestt</a>
 </header>
-<div class="about_outer">
-    <div class="about">A Free platform for freelancers</div>
-    <div class="about_small"> We are giving freelancers a special space to promote and showcase themselves.<br>
-        Making it easier to find people for each and every job out there.<br>
-        Create, Delete, and Update all of your information all with OccuPost's freelancer advertising platform!
-    </div>
+<div class="about_holder">
+    <div style="padding-left: 350px; padding-top: 120px; padding-right: 150px"><img class="animated-gif" src="https://i.imgur.com/sAX9iLo.gif" alt="video"></div>
+    <div class="about_outer">
+        <div class="about">A Free Platform For Freelancers</div>
+        <div class="about_small"> We are giving freelancers a special space to promote and showcase<br>themselves.
+            Making it easier to find people for each and every job<br>out there.
+            Create, Delete, and Update all of your information all with<br>OccuPost's freelancer advertising platform!
+        </div>
 </div>
-<!--<div class="card_test">-->
-<!--    <h1>Welcome to a Free Platform for Freelancers!</h1>-->
-<!--    <h3>View the List of All Freelancers by clicking the button below.</h3>-->
-<!--</div>-->
-<div class="card">
+</div>
+<div style="display: flex; justify-content: center">
+<div style="padding-top: 60px">
     <form class="card-content" id="get-all-freelancers-form">
         <p>
-            <button type="submit">See Full List of Freelancers</button>
+            <button id="browse">Browse Freelancers</button>
         </p>
     </form>
 </div>
-<div class="card" id="all-freelancers">
-    <h2>List of Freelancers:</h2>
+</div>
+<div style="display: flex; justify-content: center">
+<div class="card_frontpage" id="all-freelancers">
+    <h2>Our Freelancers:</h2>
     <p id="all-freelancers-info"></p>
+</div>
 </div>
 </body>
 </html>
