--- a/Frontend/src/updateFreelancer.html
+++ b/Frontend/src/updateFreelancer.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <meta charset="UTF-8">
-    <title>Add</title>
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/zECaMhq.png">
+    <title>OccuPost | Update</title>
 </head>
 <body class="background">
 <header class="header" id="header">
